sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value lgr
  for (k<- 0 to lgr-2){
                ^